# DailyIDCAM

./: CMakeLists.txt  README.md  activitysheet.cpp  activitysheet.h  activitysheetreader.cpp  activitysheetreader.h  activitysheetwriter.cpp  activitysheetwriter.h  clockify.cpp  clockify.h  main.cpp  res.qrc  utils.cpp  utils.h
.github/workflows/: ci_cd.yml  generate_daily_sheet.yml
notes/: RELEASE-1.0.0.txt  RELEASE-1.0.1.txt  RELEASE-1.0.2.txt  RELEASE-1.1.0.txt
resources/: IDCAM_Fiche_Activite_Journaliere.xlsx  IDCAM_Fiche_Activité_Journaliere..xlsx  export_body.json
